--- a/api/app/credentials.json.dist
+++ b/api/app/credentials.json.dist
@@ -1,6 +1,6 @@
 {
-	"host": "host",
-  	"user": "user",
-  	"password": "password",
-  	"db": "db"
+	"host": "localhost",
+  	"user": "root",
+  	"password": "lefluxduflux",
+  	"db": "views"
 }
