--- a/www/app/credentials.php.dist
+++ b/www/app/credentials.php.dist
@@ -2,16 +2,43 @@
 
 namespace App;
 
+/**
+ * @author Vincent Rasquier
+ * Generic class of credentials
+ * Following values are only for test,
+ * not available on production
+ */
 class Creds {
-	public function getBasePath() {
-		return '/iesa_views/www';
+	private $basePath;
+	private $apiUrl;
+	private $apiPort;
+	private $admin;
+
+	public function __construct() 
+	{
+		$this->basePath = '/';
+		$this->apiUrl = 'http://localhost';
+		$this->apiPort = '3000';
+		$this->admin = array("username" => "root", "password" => "secret");
 	}
 
-	public function getApiUrl() {
-		return 'http://localhost';
+	public function getBasePath() 
+	{
+		return $this->basePath;
 	}
 
-	public function getApiPort() {
-		return 8080;
+	public function getApiUrl() 
+	{
+		return $this->apiUrl;
+	}
+
+	public function getApiPort() 
+	{
+		return $this->apiPort;
+	}
+
+	public function getAdmin() 
+	{
+		return $this->admin;
 	}
 }
