--- a/www/app/credentials.php.dist
+++ b/www/app/credentials.php.dist
@@ -13,13 +13,15 @@ class Creds {
 	private $apiUrl;
 	private $apiPort;
 	private $admin;
+	private $apiEntry;
 
 	public function __construct() 
 	{
 		$this->basePath = '/';
 		$this->apiUrl = 'http://localhost';
-		$this->apiPort = '3000';
+		$this->apiPort = ':3000';
 		$this->admin = array("username" => "root", "password" => "secret");
+		$this->apiEntry = "/api/1/";
 	}
 
 	public function getBasePath() 
@@ -40,5 +42,10 @@ class Creds {
 	public function getAdmin() 
 	{
 		return $this->admin;
+	}
+
+	public function getApiEntry() 
+	{
+		return $this->apiEntry;
 	}
 }
